<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.oswald.primeraapp.MainActivity"
    android:id="@+id/constrain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative">


            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_usuario"
                        android:inputType="text"
                        android:maxLength="20" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInFechaNac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono"
                        android:inputType="text"
                        android:maxLength="15"
                        android:visibility="gone" />
                </android.support.design.widget.TextInputLayout>


                <DatePicker
                    android:id="@+id/dpFechaNac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="20dp"
                        android:text="@string/fecha_nac"
                        android:textColor="@color/colorBlanco" />

                </DatePicker>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono"
                        android:inputType="phone"
                        android:maxLength="15" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtInEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLength="20" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtInDescripcion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/descrip_contact"
                            android:inputType="text"
                            android:maxLength="150" />

                    </android.support.design.widget.TextInputLayout>
                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.LinearLayoutCompat>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/constrain">
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:theme="@style/MiRaisedButton"
            android:id="@+id/btnAceptar"
            android:textColor="@color/colorBlanco"
            android:text="@string/aceptar"/>
    </RelativeLayout>




</android.support.constraint.ConstraintLayout>
